--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi==0.111.0
-uvicorn[standard]==0.30.1
-pandas==2.2.2
-numpy==1.26.4
-torch==2.3.0
-scikit-learn==1.5.0
-python-multipart==0.0.9
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+torch==2.1.0
+pandas==2.1.3
+numpy==1.24.3
+scikit-learn==1.3.2
+python-dotenv==1.0.0
+pydantic==2.4.2
