--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: healthcare-prediction-api
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install --extra-index-url https://download.pytorch.org/whl/cpu -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
+      - key: ENV
+        value: production
