--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,9 @@
 services:
   - type: web
-    name: healthcare-prediction-api
+    name: healthcare-api
     env: python
-    plan: free
-    buildCommand: pip install --upgrade pip && pip install --extra-index-url https://download.pytorch.org/whl/cpu -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn app:app --host 0.0.0.0 --port 10000"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.18
-      - key: ENV
-        value: production
+        value: 3.10 # ✅ safer than 3.12, since torch 2.5+ works well with 3.10
