--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+pandas
+numpy
+scikit-learn
+torch>=2.5.0   # ✅ change from 2.1.0 to >=2.5.0 (needed for Python 3.12+)
 python-multipart==0.0.6
-torch==2.1.0
-pandas==2.1.3
-numpy==1.24.3
-scikit-learn==1.3.2
-python-dotenv==1.0.0
-pydantic==2.4.2
